<!--
    LETS KEEP THIS ALPHABETICAL BY STRING NAME
    LEAVE EMPTY LINES BETWEEN LARGE CHUNKS OF SKIPPED LETTERS
-->
<resources>

    <string name="action_settings">Settings</string>
    <string name="app_name">Favorites</string>
    <string name="button_submit_text">Submit</string>

    <string name="extra_notes_placeholder">Extra Notes</string>

    <string name="item_to_gift_placeholder">Name of Gift Idea</string>
    <string name="item_category_placeholder">Category of Item</string>

    <string name="person_to_gift_to_placeholder">Person to associate with gift</string>
    
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


</resources>
